crates/mcp/tests/it/snapshots/it__snapshot__path_cross_project.snap
---
source: crates/mcp/tests/it/snapshot.rs
expression: fixture.render(&text)
---
# path audit -> AuditLog:
  audit (orders/models.py:13)
    →instantiates→ AuditLog (platform_core/models.py:11)
