crates/mcp/tests/it/snapshots/it__snapshot__path_unconnected.snap
---
source: crates/mcp/tests/it/snapshot.rs
expression: fixture.render(&text)
---
no flow path between "checkout_view" and "AuditLog" within 6 hops (call / route / render / instantiate / inherit / template-inherit edges)
